# screen-timer

./: .gitignore  README.md  pyproject.toml
src/screen_timer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/screentimer/: __init__.py  agent.py  config.py  media.py  permissions.py  policy.py  processor.py  screenshot.py  streaming.py  vlm.py
